--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "javascript-action",
+  "name": "slack-github-action",
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint index.js",
-    "package": "ncc build index.js -o dist",
-    "test": "eslint index.js && jest"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -24,11 +22,13 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.1.1"
+    "@actions/core": "^1.1.1",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
+    "@beacon/eslint-config-node": "^1.2.3",
     "@zeit/ncc": "^0.20.5",
-    "eslint": "^6.3.0",
+    "eslint": "^6.8.0",
     "jest": "^24.9.0"
   }
 }
