--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
   "name": "slack-github-action",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "Send Slack notifications to report on builds in Github actions",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "ncc build index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/beaconcrm/slack-github-action"
   },
-  "keywords": [
-    "GitHub",
-    "Actions",
-    "JavaScript"
-  ],
-  "author": "GitHub",
+  "author": "Chris Houghton",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
-  },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/beaconcrm/slack-github-action",
   "dependencies": {
     "@actions/core": "^1.1.1",
     "axios": "^0.19.2"
   },
   "devDependencies": {
     "@beacon/eslint-config-node": "^1.2.3",
-    "@zeit/ncc": "^0.20.5",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0"
+    "eslint": "^6.8.0"
   }
 }
