--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,9 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'Send slack notification'
+description: 'Send a Slack notification of a successful build'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  status:
+    description: Specify success or failure or cancelled or custom.
     required: true
-    default: '1000'
 outputs:
   time: # output will be available to future steps 
     description: 'The message to output'
