--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@actions/core": "^1.1.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mout": "^1.2.2"
   },
   "devDependencies": {
     "@beacon/eslint-config-node": "^1.2.3",
