--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@actions/core": "^1.1.1",
     "axios": "^1.7.4",
     "dotenv": "^16.3.1",
-    "lodash": "^4.17.21",
-    "mout": "^1.2.4"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@beacon/eslint-config-node": "^1.2.6",
